--- a/src/assets/scss/style9.scss
+++ b/src/assets/scss/style9.scss
@@ -540,7 +540,7 @@ section {
       padding-left: 1.8rem;
       &:before {
         content: "";
-        min-width: 0.625rem;
+        width: 0.625rem;
         height: 0.625rem;
         background-color: rgba(20, 14, 10, 0.16);
         display: inline-block;
