--- a/src/assets/scss/mobile9.css
+++ b/src/assets/scss/mobile9.css
@@ -831,7 +831,7 @@
   }
   .mid-size .animation-button-height.show {
     height: 19rem;
-    transition: 1s 1s;
+    transition: 1s 0s;
   }
   .mid-size .round-button {
     width: 18rem;
@@ -1335,13 +1335,16 @@
     width: 100%;
     transition: 1s;
   }
+  .footer__gray-line {
+    width: 100% !important;
+  }
   .intoAnimation .services-desc__gray-line {
     width: 100%;
     transition: 1s 1s;
   }
   .gray-line.show {
     width: 100%;
-    transition: 1s 0.5s;
+    transition: 1s 0s;
   }
   .specialists__content {
     width: 100%;
@@ -3285,6 +3288,37 @@
     overflow: hidden;
     box-sizing: border-box;
   }
+  .price-assembly.compl .price-assembly__text {
+    width: 100%;
+  }
+  .price-assembly_p-button {
+    padding: 2.2rem 0;
+    margin-top: 1.2rem;
+  }
+  .premium-service__text-slider .swiper-slide {
+    opacity: 0 !important;
+    transition: 0.3s !important;
+  }
+  .premium-service__text-slider .swiper-slide.swiper-slide-active {
+    opacity: 1 !important;
+    transition: 0.7s 0.3s !important;
+  }
+  .project-support .preoject-description__button {
+    height: 13rem;
+  }
+  .project-support .price-supervision__gray-line {
+    bottom: -3.4rem;
+  }
+  .project-support .price-supervision__button-anchor {
+    bottom: -7rem;
+  }
+  .project-support__top-text {
+    font-size: 2rem;
+    line-height: 1.28;
+  }
+  .services-desc.architecture .services-desc__bottom {
+    left: 0;
+  }
   .premium-service-slider {
     height: 33rem;
   }
@@ -3478,7 +3512,38 @@
     flex-direction: column-reverse;
     align-items: start;
     position: unset;
-    margin-top: 14rem;
+    margin-top: 2.4rem;
+  }
+  .vision-alert__text {
+    margin-bottom: 8rem;
+    font-size: 1.6rem;
+    line-height: 1.4;
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+    text-align: center;
+  }
+  .vision-alert__text:last-child {
+    margin-bottom: 0;
+  }
+  .about-advantages__item-text {
+    width: 29.5rem;
+  }
+  .premium-service.vision .swiper__navigation-box {
+    position: absolute;
+    bottom: 6rem;
+  }
+  .premium-service .preoject-description__button {
+    height: 18rem;
+  }
+  .premium-service .preoject-description__button .main-view__button-text-wrapper {
+    height: 6rem;
+    top: 4rem;
+  }
+  .premium-service .preoject-description__button .show.main-view__button-text {
+    height: 6rem;
+  }
+  .premium-service .preoject-description__button .main-view__arrow-wrapper {
+    top: 10.4rem;
   }
   .vision-main__bottom-right {
     width: 100%;
@@ -3486,6 +3551,13 @@
   }
   .vision-main__bottom-text:last-child {
     display: none;
+  }
+  .vision-main__sub-title {
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    line-height: 1.4;
+    letter-spacing: 0.04em;
+    margin-top: 8rem;
   }
   .vision-main__bottom-text {
     width: 100%;
