--- a/src/assets/scss/mobile10.css
+++ b/src/assets/scss/mobile10.css
@@ -86,6 +86,10 @@
     height: 0;
     transition: 0.3s;
   }
+  .price-supervision__img.big-img {
+    width: 100vw;
+    margin-left: -1.6rem;
+  }
   .result-swiper__text {
     font-size: 1rem;
     right: unset;
@@ -115,7 +119,7 @@
   }
   .menu-is-open .header__menu li {
     transform: translateX(0);
-    transition: 1s 0s;
+    transition: 1s 1s;
   }
   .menu-is-open .header__menu li:nth-child(2) {
     transition: 1s 1.1s;
