--- a/src/assets/scss/mobile10.css
+++ b/src/assets/scss/mobile10.css
@@ -3535,6 +3535,7 @@
   .premium-service.vision .swiper__navigation-box {
     position: absolute;
     bottom: 6rem;
+    z-index: 5;
   }
   .premium-service .preoject-description__button {
     height: 18rem;
