--- a/src/assets/scss/mobile11.scss
+++ b/src/assets/scss/mobile11.scss
@@ -877,7 +877,7 @@ $vh: calc(100vh/700);
   }
 
   .modal-content {
-    padding: 11rem 1.6rem 4rem;
+    padding: 7rem 1.6rem 4rem;
     &__bottom {
       position: relative;
       overflow: hidden;
@@ -905,7 +905,7 @@ $vh: calc(100vh/700);
         margin-bottom: 4rem;
         width: 100%;
         &:last-child {
-          margin-bottom: 6rem;
+          margin-bottom: 2.4rem;
         }
       }
     }
@@ -3939,3 +3939,137 @@ html.horizontal {
   }
 }
 
+.cookies-wrapper {
+  position: fixed;
+  z-index: 101;
+  bottom: 3.3rem;
+  left: 0;
+  width: 100vw;
+  height: 24rem;
+  overflow: hidden;
+  transition: 1s;
+}
+
+.cookies-accepted.cookies-wrapper {
+  height: 0;
+  transition: 0.5s;
+}
+
+.cookies-content {
+  background-color: $primary-light-color;
+  width: 34.3rem;
+  margin: 0 auto;
+  padding: 2.4rem 1.6rem;
+  box-sizing: border-box;
+  border: 1px solid rgba(20, 14, 10, 0.16);
+  opacity: 1;
+  transform: scale(1);
+  transform-origin: center bottom;
+  height: 24rem;
+  transition: 1s 2s;
+}
+
+.isLoading .cookies-content {
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.5s;
+}
+
+.cookies-accepted .cookies-content {
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.5s;
+}
+
+.cookies-text {
+  font-size: 1.8rem;
+  width: 100%;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.cookies-content .primary-button__circle-animation {
+  height: 6rem !important;
+}
+
+.cookies-content .primary-button__circle-anchor {
+  opacity: 1 !important;
+}
+
+.cookies-right {
+  margin-top: 4rem;
+}
+
+
+.hidden-checkbox {
+  appearance: none !important;
+  -webkit-appearance: none !important;
+  display: none !important;
+}
+
+.custom-checkmark {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 0.5rem;
+  svg {
+    display: block;
+    path {
+      stroke: rgba(20, 14, 10, 0.4);
+      transition: 0.5s;
+    }
+    &.checked {
+      display: none;
+    }
+  }
+}
+
+.hidden-checkbox:checked + .custom-checkmark {
+  svg {
+    display: none;
+    path {
+      stroke: $primary-dark-color;
+      transition: 0.5s;
+    }
+    &.checked {
+      display: block;
+    }
+  }
+}
+
+.custom-checkbox-text {
+  color: rgba(20, 14, 10, 0.4);
+  transition: 0.5s;
+}
+
+.hidden-checkbox:checked ~ .custom-checkbox-text {
+  color: $primary-dark-color;
+  transition: 0.5s;
+}
+
+.custom-checkbox-text {
+  font-size: 1.6rem;
+}
+
+.feedback-form__desc .animation-slide-down__container {
+  padding-left: 3.5rem;
+  .custom-checkmark {
+    position: absolute;
+    left: -3.5rem;
+  }
+}
+
+.modal-form .primary-button__circle-anchor {
+  opacity: 1 !important;
+}
+
+.modal-form .feedback-form__desc {
+  margin-bottom: 4rem;
+}
+
+.modal-form .contacts-block {
+  margin-top: 4rem;
+}
